[project]
name = "lpf-cli"
version = "0.1.0"
description = "A CLI tool to manage local port forwarding tunnels with `autossh`, built with Typer and Rich."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
lpf = "lpf.main:main"
